# ParallelProcessing

./: .gitignore
LAB_1/: CMakeLists.txt
LAB_1/src/: main.cpp
LAB_2/: CMakeLists.txt
LAB_2/src/: main.cpp
LAB_3/: CMakeLists.txt
LAB_3/src/: main.cpp
LAB_4/: CMakeLists.txt
LAB_4/src/: main.cpp
LAB_5/: CMakeLists.txt
LAB_5/src/: main.cpp
LAB_6/: CMakeLists.txt
LAB_6/src/: main.cu
LAB_7/: CMakeLists.txt
LAB_7/src/: binary_jpg_img.py  main.cu  transform_img.cu
LAB_8/: CMakeLists.txt
LAB_8/src/: main.cu
LAB_9/: CMakeLists.txt
LAB_9/src/: main.cpp
P/: CMakeLists.txt
P/src/: client.cpp  client.h  client_cli.cpp  client_cli.h  matrix.h  server.cpp  server.h  timer.h
P_1/src/: client_cli.cpp  server.cpp
P_2/: CMakeLists.txt
P_2/protos/: matrix.proto
P_2/src/: client.cpp  client.h  client_cli.cpp  client_cli.h  server.cpp  server.h  timer.h
