cmake_minimum_required(VERSION 3.18)
project(LAB_7 LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CUDA_STANDARD 14)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

add_executable(LAB_7 src/main.cu)

set_target_properties(LAB_7 PROPERTIES CUDA_SEPARABLE_COMPILATION ON)